[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arvak-lite"
version = "0.1.0"
description = "Lightweight quantum circuit compiler. Drop-in replacement for Qiskit transpile, Cirq optimize, and more. Powered by Arvak."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "LGPL-3.0-or-later" }
authors = [
    { name = "The HAL Contract", email = "hello@hal-contract.org" }
]
keywords = ["quantum", "compiler", "transpiler", "qiskit", "cirq", "pulser", "circuit"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Lesser General Public License v3 or later (LGPLv3+)",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Physics",
]
urls = { Homepage = "https://arvak.io", Repository = "https://github.com/hiq-lab/arvak-lite" }
dependencies = [
    "arvak>=1.9.3",
]

[project.optional-dependencies]
qiskit = ["qiskit>=1.0.0", "qiskit-qasm3-import>=0.5.0"]
cirq = ["cirq>=1.0.0"]
pennylane = ["pennylane>=0.32.0"]
pulser = ["pulser-core>=1.0.0"]
qbraid = ["qbraid>=0.8.0"]
all = ["arvak-lite[qiskit,cirq,pennylane,pulser,qbraid]"]
dev = ["pytest>=8.0", "httpx>=0.27"]

# ---------------------------------------------------------------------------
# Qiskit transpiler plugin registration
# ---------------------------------------------------------------------------
# These entry_points make Arvak available as a named plugin in Qiskit's
# transpile() function, e.g.:
#   transpile(circuit, optimization_method="arvak")
#   transpile(circuit, routing_method="arvak")
#   transpile(circuit, init_method="arvak")

[project.entry-points."qiskit.transpiler.init"]
arvak = "arvak_lite.qiskit_plugin:ArvakInitPlugin"

[project.entry-points."qiskit.transpiler.routing"]
arvak = "arvak_lite.qiskit_plugin:ArvakRoutingPlugin"

[project.entry-points."qiskit.transpiler.optimization"]
arvak = "arvak_lite.qiskit_plugin:ArvakOptimizationPlugin"
